[gd_scene load_steps=17 format=2]

[ext_resource path="res://scenes/lady.tscn" type="PackedScene" id=1]
[ext_resource path="res://tilesets/graveyard_platform_tiles.tres" type="TileSet" id=2]
[ext_resource path="res://tilesets/graveyard_solid_tiles.tres" type="TileSet" id=3]
[ext_resource path="res://scenes/crate.tscn" type="PackedScene" id=5]
[ext_resource path="res://scenes/hud.tscn" type="PackedScene" id=6]
[ext_resource path="res://scenes/zombie.tscn" type="PackedScene" id=7]
[ext_resource path="res://assets/BG.png" type="Texture" id=8]
[ext_resource path="res://scenes/scenedirector.gd" type="Script" id=9]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 320, 64 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 384, 64 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 448, 64 )

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 320, 64 )

[sub_resource type="RectangleShape2D" id=7]
extents = Vector2( 256, 64 )

[sub_resource type="RectangleShape2D" id=8]
extents = Vector2( 256, 64 )

[sub_resource type="RectangleShape2D" id=9]
extents = Vector2( 256, 64 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 7424, 128 )

[node name="Node2D" type="Node2D"]

[node name="SceneDirector" type="Node" parent="."]
script = ExtResource( 9 )

[node name="FallTimer" type="Timer" parent="SceneDirector"]

[node name="Background" type="ParallaxBackground" parent="."]

[node name="ParallaxLayer" type="ParallaxLayer" parent="Background"]
motion_scale = Vector2( 0.3, 0.07 )
motion_offset = Vector2( 0, -632 )
motion_mirroring = Vector2( 2400, 0 )
__meta__ = {
"_edit_lock_": true
}

[node name="Sprite" type="Sprite" parent="Background/ParallaxLayer"]
scale = Vector2( 1.2, 1.2 )
texture = ExtResource( 8 )
centered = false
__meta__ = {
"_edit_lock_": true
}

[node name="ShootyLady" parent="." instance=ExtResource( 1 )]
position = Vector2( 320, 704 )
z_index = 1

[node name="Camera2D" type="Camera2D" parent="ShootyLady"]
position = Vector2( 10, 9 )
current = true
limit_left = 0
limit_top = -1800
limit_bottom = 1150
drag_margin_h_enabled = true
editor_draw_limits = true
editor_draw_drag_margin = true

[node name="TileGroup" type="Node2D" parent="."]

[node name="PlatformTiles" type="TileMap" parent="TileGroup"]
tile_set = ExtResource( 2 )
cell_size = Vector2( 128, 128 )
format = 1
tile_data = PoolIntArray( -720849, 0, 0, -720848, 1, 0, -720847, 1, 0, -720846, 2, 0, -524244, 0, 0, -524243, 1, 0, -524242, 1, 0, -524241, 2, 0, -327658, 0, 0, -327657, 1, 0, -327656, 1, 0, -327655, 1, 0, -327654, 1, 0, -327653, 2, 0, -327639, 0, 0, -327638, 1, 0, -327637, 1, 0, -327636, 2, 0, -131055, 0, 0, -131054, 1, 0, -131053, 1, 0, -131052, 1, 0, -131051, 2, 0, -131046, 0, 0, -131045, 1, 0, -131044, 1, 0, -131043, 1, 0, -131042, 1, 0, -131041, 1, 0, -131040, 2, 0, -131036, 0, 0, -131035, 1, 0, -131034, 1, 0, -131033, 1, 0, -131032, 2, 0 )

[node name="SolidTiles" type="TileMap" parent="TileGroup"]
tile_set = ExtResource( 3 )
cell_size = Vector2( 128, 128 )
collision_layer = 4
collision_mask = 0
format = 1
tile_data = PoolIntArray( -1179649, 0, 0, -1114113, 0, 0, -1048577, 0, 0, -983041, 0, 0, -917506, 0, 0, -917505, 0, 0, -983040, 0, 0, -851969, 0, 0, -786433, 0, 0, -720897, 0, 0, -655361, 0, 0, -589825, 0, 0, -524289, 0, 0, -458753, 0, 0, -393217, 0, 0, -327681, 0, 0, -262145, 0, 0, -196609, 0, 0, -131073, 0, 0, -196560, 1, 0, -196559, 2, 0, -196558, 2, 0, -196557, 2, 0, -196556, 2, 0, -196555, 2, 0, -196554, 2, 0, -196553, 3, 0, -196549, 1, 0, -196548, 2, 0, -196547, 2, 0, -196546, 2, 0, -196545, 2, 0, -196544, 2, 0, -196543, 2, 0, -196542, 2, 0, -196541, 2, 0, -196540, 2, 0, -196539, 2, 0, -196538, 3, 0, -65537, 0, 0, -131024, 4, 0, -131023, 0, 0, -131022, 0, 0, -131021, 0, 0, -131020, 0, 0, -131019, 0, 0, -131018, 0, 0, -131017, 5, 0, -131013, 4, 0, -131012, 0, 0, -131011, 0, 0, -131010, 0, 0, -131009, 0, 0, -131008, 0, 0, -131007, 0, 0, -131006, 0, 0, -131005, 0, 0, -131004, 0, 0, -131003, 0, 0, -131002, 5, 0, -1, 0, 0, -65488, 4, 0, -65487, 0, 0, -65486, 0, 0, -65485, 0, 0, -65484, 0, 0, -65483, 0, 0, -65482, 0, 0, -65481, 5, 0, -65477, 4, 0, -65476, 0, 0, -65475, 0, 0, -65474, 0, 0, -65473, 0, 0, -65472, 0, 0, -65471, 0, 0, -65470, 0, 0, -65469, 0, 0, -65468, 0, 0, -65467, 0, 0, -65466, 5, 0, -65463, 1, 0, -65462, 2, 0, -65461, 3, 0, 65535, 0, 0, 48, 4, 0, 49, 0, 0, 50, 0, 0, 51, 0, 0, 52, 0, 0, 53, 0, 0, 54, 0, 0, 55, 5, 0, 59, 4, 0, 60, 0, 0, 61, 0, 0, 62, 0, 0, 63, 0, 0, 64, 0, 0, 65, 0, 0, 66, 0, 0, 67, 0, 0, 68, 0, 0, 69, 0, 0, 70, 5, 0, 73, 4, 0, 74, 0, 0, 75, 0, 0, 131071, 0, 0, 65558, 1, 0, 65559, 2, 0, 65560, 2, 0, 65561, 2, 0, 65562, 2, 0, 65563, 2, 0, 65564, 2, 0, 65565, 2, 0, 65584, 4, 0, 65585, 0, 0, 65586, 0, 0, 65587, 0, 0, 65588, 0, 0, 65589, 0, 0, 65590, 0, 0, 65591, 5, 0, 65595, 4, 0, 65596, 0, 0, 65597, 0, 0, 65598, 0, 0, 65599, 0, 0, 65600, 0, 0, 65601, 0, 0, 65602, 0, 0, 65603, 0, 0, 65604, 0, 0, 65605, 0, 0, 65606, 5, 0, 65609, 4, 0, 65610, 0, 0, 65611, 0, 0, 65614, 1, 0, 65615, 2, 0, 65616, 3, 0, 196607, 0, 0, 131094, 4, 0, 131095, 5, 0, 131120, 4, 0, 131121, 0, 0, 131122, 0, 0, 131123, 0, 0, 131124, 0, 0, 131125, 0, 0, 131126, 0, 0, 131127, 5, 0, 131131, 4, 0, 131132, 0, 0, 131133, 0, 0, 131134, 0, 0, 131135, 0, 0, 131136, 0, 0, 131137, 0, 0, 131138, 0, 0, 131139, 0, 0, 131140, 0, 0, 131141, 0, 0, 131142, 5, 0, 131145, 4, 0, 131146, 0, 0, 131147, 0, 0, 131150, 4, 0, 131151, 0, 0, 131152, 5, 0, 262143, 0, 0, 196656, 4, 0, 196657, 0, 0, 196658, 0, 0, 196659, 0, 0, 196660, 0, 0, 196661, 0, 0, 196662, 0, 0, 196663, 5, 0, 196667, 4, 0, 196668, 0, 0, 196669, 0, 0, 196670, 0, 0, 196671, 0, 0, 196672, 0, 0, 196673, 0, 0, 196674, 0, 0, 196675, 0, 0, 196676, 0, 0, 196677, 0, 0, 196678, 5, 0, 196681, 4, 0, 196682, 0, 0, 196683, 0, 0, 196686, 4, 0, 196687, 0, 0, 196688, 5, 0, 196691, 1, 0, 196692, 2, 0, 196693, 2, 0, 196694, 2, 0, 196695, 3, 0, 327679, 0, 0, 262169, 1, 0, 262170, 2, 0, 262171, 3, 0, 262173, 1, 0, 262174, 2, 0, 262175, 2, 0, 262176, 2, 0, 262177, 2, 0, 262178, 2, 0, 262179, 2, 0, 262180, 3, 0, 262192, 4, 0, 262193, 0, 0, 262194, 0, 0, 262195, 0, 0, 262196, 0, 0, 262197, 0, 0, 262198, 0, 0, 262199, 5, 0, 262203, 4, 0, 262204, 0, 0, 262205, 0, 0, 262206, 0, 0, 262207, 0, 0, 262208, 0, 0, 262209, 0, 0, 262210, 0, 0, 262211, 0, 0, 262212, 0, 0, 262213, 0, 0, 262214, 5, 0, 262217, 4, 0, 262218, 0, 0, 262219, 0, 0, 262222, 4, 0, 262223, 0, 0, 262224, 5, 0, 262227, 4, 0, 262228, 0, 0, 262229, 0, 0, 262230, 0, 0, 262231, 5, 0, 393215, 0, 0, 327705, 4, 0, 327706, 0, 0, 327707, 5, 0, 327708, 2, 0, 327709, 4, 0, 327710, 0, 0, 327711, 0, 0, 327712, 0, 0, 327713, 0, 0, 327714, 0, 0, 327715, 0, 0, 327716, 5, 0, 327728, 4, 0, 327729, 0, 0, 327730, 0, 0, 327731, 0, 0, 327732, 0, 0, 327733, 0, 0, 327734, 0, 0, 327735, 5, 0, 327739, 4, 0, 327740, 0, 0, 327741, 0, 0, 327742, 0, 0, 327743, 0, 0, 327744, 0, 0, 327745, 0, 0, 327746, 0, 0, 327747, 0, 0, 327748, 0, 0, 327749, 0, 0, 327750, 5, 0, 327753, 4, 0, 327754, 0, 0, 327755, 0, 0, 327758, 4, 0, 327759, 0, 0, 327760, 5, 0, 327763, 4, 0, 327764, 0, 0, 327765, 0, 0, 327766, 0, 0, 327767, 5, 0, 458751, 0, 0, 393224, 1, 0, 393225, 3, 0, 393241, 4, 0, 393242, 0, 0, 393243, 5, 0, 393245, 4, 0, 393246, 0, 0, 393247, 0, 0, 393248, 0, 0, 393249, 0, 0, 393250, 0, 0, 393251, 0, 0, 393252, 5, 0, 393264, 4, 0, 393265, 0, 0, 393266, 0, 0, 393267, 0, 0, 393268, 0, 0, 393269, 0, 0, 393270, 0, 0, 393271, 5, 0, 393275, 4, 0, 393276, 0, 0, 393277, 0, 0, 393278, 0, 0, 393279, 0, 0, 393280, 0, 0, 393281, 0, 0, 393282, 0, 0, 393283, 0, 0, 393284, 0, 0, 393285, 0, 0, 393286, 5, 0, 393289, 4, 0, 393290, 0, 0, 393291, 0, 0, 393294, 4, 0, 393295, 0, 0, 393296, 5, 0, 393299, 4, 0, 393300, 0, 0, 393301, 0, 0, 393302, 0, 0, 393303, 5, 0, 524287, 0, 0, 458752, 2, 0, 458753, 2, 0, 458754, 2, 0, 458755, 2, 0, 458756, 2, 0, 458757, 2, 0, 458758, 2, 0, 458759, 10, 0, 458760, 11, 0, 458761, 12, 0, 458762, 9, 0, 458763, 2, 0, 458764, 2, 0, 458765, 3, 0, 458769, 1, 0, 458770, 2, 0, 458771, 2, 0, 458772, 2, 0, 458773, 2, 0, 458774, 2, 0, 458775, 2, 0, 458776, 10, 0, 458777, 11, 0, 458778, 0, 0, 458779, 5, 0, 458780, 4, 0, 458781, 4, 0, 458782, 0, 0, 458783, 0, 0, 458784, 0, 0, 458785, 0, 0, 458786, 0, 0, 458787, 0, 0, 458788, 5, 0, 458800, 4, 0, 458801, 0, 0, 458802, 0, 0, 458803, 0, 0, 458804, 0, 0, 458805, 0, 0, 458806, 0, 0, 458807, 5, 0, 458811, 4, 0, 458812, 0, 0, 458813, 0, 0, 458814, 0, 0, 458815, 0, 0, 458816, 0, 0, 458817, 0, 0, 458818, 0, 0, 458819, 0, 0, 458820, 0, 0, 458821, 0, 0, 458822, 5, 0, 458825, 4, 0, 458826, 0, 0, 458827, 0, 0, 458830, 4, 0, 458831, 0, 0, 458832, 5, 0, 458835, 4, 0, 458836, 0, 0, 458837, 0, 0, 458838, 0, 0, 458839, 5, 0, 589823, 0, 0, 524288, 0, 0, 524289, 0, 0, 524290, 0, 0, 524291, 0, 0, 524292, 0, 0, 524293, 0, 0, 524294, 0, 0, 524295, 0, 0, 524296, 0, 0, 524297, 0, 0, 524298, 0, 0, 524299, 0, 0, 524300, 0, 0, 524301, 5, 0, 524305, 4, 0, 524306, 0, 0, 524307, 0, 0, 524308, 0, 0, 524309, 0, 0, 524310, 0, 0, 524311, 0, 0, 524312, 0, 0, 524313, 0, 0, 524314, 0, 0, 524315, 5, 0, 524317, 4, 0, 524318, 0, 0, 524319, 0, 0, 524320, 0, 0, 524321, 0, 0, 524322, 0, 0, 524323, 0, 0, 524324, 5, 0, 524336, 4, 0, 524337, 0, 0, 524338, 0, 0, 524339, 0, 0, 524340, 0, 0, 524341, 0, 0, 524342, 0, 0, 524343, 5, 0, 524347, 4, 0, 524348, 0, 0, 524349, 0, 0, 524350, 0, 0, 524351, 0, 0, 524352, 0, 0, 524353, 0, 0, 524354, 0, 0, 524355, 0, 0, 524356, 0, 0, 524357, 0, 0, 524358, 5, 0, 524361, 4, 0, 524362, 0, 0, 524363, 0, 0, 524366, 4, 0, 524367, 0, 0, 524368, 5, 0, 524371, 4, 0, 524372, 0, 0, 524373, 0, 0, 524374, 0, 0, 524375, 5, 0, 655358, 0, 0, 655359, 0, 0, 589824, 0, 0, 589825, 0, 0, 589826, 0, 0, 589827, 0, 0, 589828, 0, 0, 589829, 0, 0, 589830, 0, 0, 589831, 0, 0, 589832, 0, 0, 589833, 0, 0, 589834, 0, 0, 589835, 0, 0, 589836, 0, 0, 589837, 5, 0, 589841, 4, 0, 589842, 0, 0, 589843, 0, 0, 589844, 0, 0, 589845, 0, 0, 589846, 0, 0, 589847, 0, 0, 589848, 0, 0, 589849, 0, 0, 589850, 0, 0, 589851, 5, 0, 589853, 4, 0, 589854, 0, 0, 589855, 0, 0, 589856, 0, 0, 589857, 0, 0, 589858, 0, 0, 589859, 0, 0, 589860, 5, 0, 589872, 4, 0, 589873, 0, 0, 589874, 0, 0, 589875, 0, 0, 589876, 0, 0, 589877, 0, 0, 589878, 0, 0, 589879, 5, 0, 589883, 4, 0, 589884, 0, 0, 589885, 0, 0, 589886, 0, 0, 589887, 0, 0, 589888, 0, 0, 589889, 0, 0, 589890, 0, 0, 589891, 0, 0, 589892, 0, 0, 589893, 0, 0, 589894, 5, 0, 589897, 4, 0, 589898, 0, 0, 589899, 0, 0, 589902, 4, 0, 589903, 0, 0, 589904, 5, 0, 589907, 4, 0, 589908, 0, 0, 589909, 0, 0, 589910, 0, 0, 589911, 5, 0 )

[node name="PlatformBody" type="StaticBody2D" parent="TileGroup"]
collision_layer = 4
collision_mask = 0
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="TileGroup/PlatformBody"]
position = Vector2( 2496, -192 )
shape = SubResource( 1 )
one_way_collision = true

[node name="CollisionShape2D3" type="CollisionShape2D" parent="TileGroup/PlatformBody"]
position = Vector2( 3200, -576 )
shape = SubResource( 4 )
one_way_collision = true

[node name="CollisionShape2D4" type="CollisionShape2D" parent="TileGroup/PlatformBody"]
position = Vector2( 3776, -192 )
shape = SubResource( 5 )
one_way_collision = true

[node name="CollisionShape2D5" type="CollisionShape2D" parent="TileGroup/PlatformBody"]
position = Vector2( 4928, -192 )
shape = SubResource( 6 )
one_way_collision = true

[node name="CollisionShape2D6" type="CollisionShape2D" parent="TileGroup/PlatformBody"]
position = Vector2( 5504, -576 )
shape = SubResource( 7 )
one_way_collision = true

[node name="CollisionShape2D7" type="CollisionShape2D" parent="TileGroup/PlatformBody"]
position = Vector2( 5888, -960 )
shape = SubResource( 8 )
one_way_collision = true

[node name="CollisionShape2D8" type="CollisionShape2D" parent="TileGroup/PlatformBody"]
position = Vector2( 6272, -1344 )
shape = SubResource( 9 )
one_way_collision = true

[node name="AreaDeath" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 41

[node name="CollisionShape2D" type="CollisionShape2D" parent="AreaDeath"]
position = Vector2( 4736, 1280 )
shape = SubResource( 3 )

[node name="KinematicBody2D2" parent="." instance=ExtResource( 5 )]
position = Vector2( 2752, 800 )
mode = 0
mass = 5.0
gravity_scale = 4.0

[node name="KinematicBody2D3" parent="." instance=ExtResource( 5 )]
position = Vector2( 2752, 672 )
mode = 0
mass = 5.0
gravity_scale = 4.0

[node name="KinematicBody2D4" parent="." instance=ExtResource( 5 )]
position = Vector2( 2752, 544 )
mode = 0
mass = 5.0
gravity_scale = 4.0

[node name="KinematicBody2D5" parent="." instance=ExtResource( 5 )]
position = Vector2( 2752, 416 )
mode = 0
mass = 5.0
gravity_scale = 4.0

[node name="KinematicBody2D7" parent="." instance=ExtResource( 5 )]
position = Vector2( 3392, 416 )
mode = 0
mass = 5.0
gravity_scale = 4.0

[node name="KinematicBody2D8" parent="." instance=ExtResource( 5 )]
position = Vector2( 7040, -480 )
mode = 0
mass = 5.0
gravity_scale = 4.0

[node name="HUD" parent="." instance=ExtResource( 6 )]

[node name="Zombie" parent="." instance=ExtResource( 7 )]
position = Vector2( 4224, 288 )
facing = -1
strong = true
smart = true

[node name="Zombie2" parent="." instance=ExtResource( 7 )]
position = Vector2( 8672, -608 )
facing = -1
smart = true

[connection signal="timeout" from="SceneDirector/FallTimer" to="SceneDirector" method="_on_FallTimer_timeout"]
[connection signal="body_entered" from="AreaDeath" to="SceneDirector" method="_on_AreaDeath_body_entered"]
